<resources>
    <string name="app_name">Bejeweled</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_end">EndOfGameActivity</string>
    <string name="image_content_description">Fin du jeu</string>
	<string name="create_account">Créer un compte</string>
	<string name="username">utilisateur</string>
	<string name="connect">Enregistrer le score</string>
	<string name="title_activity_main">main_activity</string>
	<string name="mode">Dans quel mode souhaitez-vous jouer ?</string>
	<string name="name">Entrez votre nom :</string>
	<string name="send">Envoyer</string>
	<string name="elapsed_time">Temps écoulé : </string>
	<string name="choice">Que souhaitez-vous faire ?</string>
	<string name="button1">Meilleurs scores</string>
	<string name="button2">Modes de jeu</string>
	<string name="button3">Quitter</string>
	<string name="scores">Voici les scores : </string>
	<string name="title_activity_scores">scores_activity</string>
	<string name="title_activity_record_scores">record_scores_activity</string>
	<string name="retour">Retour à la page principale</string>
	<string name="reset">Reinitialiser les scores</string>
	<string name="moves">mouvements utilisés : </string>
	<string name="obtained_score">Vous avez obtenu le score de : </string>
	<string name="score_display">score : </string>
	<string name="score1">1. XXX </string>
	<string name="score2">2. XXX</string>
	<string name="score3">3. XXX</string>
	<string name="score4">4. XXX</string>
	<string name="score5">5. XXX</string>
	<string name="button_start">Je veux recommencer</string>
	<string name="button_exit">Je veux quitter</string>
	<string name="button_time">Temps limité (60sec)</string>
	<string name="button_moves">Mouvements limités (10)</string>
	<string name="exit_game">quitter</string>
	<string name="current_score">xxx</string>
	<string name="tps_mvts">xxx</string>
	<string name="xxx">xxx</string>
	<string name="title_activity_exit">exit_activity</string>
	<string name="title_activity_game_time">game_activity_time</string>
	<string name="title_activity_game_move">game_activity_move</string>
	<string name="title_activity_mode">mode_activity</string>
	<string name="ignore">Ignorer</string>
	<color name="black">#000000</color>
	<color name="white">#FFFFFF</color>
</resources>