<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:text="@string/scores" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="left"
        android:textSize="20sp"
        android:text="@string/score1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="left"
        android:textSize="20sp"
        android:text="@string/score2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="left"
        android:textSize="20sp"
        android:text="@string/score3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="left"
        android:textSize="20sp"
        android:text="@string/score4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="left"
        android:textSize="20sp"
        android:text="@string/score5" />

</LinearLayout>
