<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background" >

    <ImageView
        android:id="@+id/welcome_imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bienvenue" />

    <Button
        android:id="@+id/button1"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/button1"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/button2"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/button3" 
        android:textColor="@color/white"/>

</LinearLayout>
